[package]
name = "blinky"
version = "0.1.0"
edition = "2021"
authors = ["@imrank <immu0396@gmail.com>"]
categories = ["embedded", "no_std"]
description = """
STM32 Blinky project, written in pure-Rust.
"""
documentation = ""
homepage = ""
keywords = ["LED", "Delay"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/imrank03/blinky.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
defmt = "0.3.0"
defmt-rtt = {version = "0.3.1"}
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
panic-halt = "0.2.0"
stm32f0xx-hal =  { version = "0.18.0", default-features = false, features = ["rt", "stm32f091"]}

[profile.release]
debug = true
lto = true
opt-level = "s"

[features]
default = ['defmt-default']
# these features are required by defmt
defmt-debug = []
defmt-default = []
defmt-error = []
defmt-info = []
defmt-trace = []
defmt-warn = []

